[package]
name = "web-carving"
version = "0.1.0"
authors = ["dasetwas <dasetwas@dasetwas.dasetwas>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.6.0"
stdweb = "0.4.17"
image = { version = "0.21.0", default-features = false, features = ["png_codec"] }